[tool.poetry]
name = "meural-photo-prep"
version = "0.1.0"
description = "Module to assist in preparing photos for Netgear's Meural Canvas"
authors = ["James Arnett <jamesarnett@icloud.com>"]
readme = "README.md"
packages = [{include = "meural_photo_prep"}]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = ["poetry.core.masonry.api"]
